--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 /*サイト全体のcss*/
 @charset "UTF-8";
-
+.header {
+    position: relative;
+    background-color: aqua;
+}
 /*ナビ*/
+#menubar {
+    a
+}
