--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 /*サイト全体のcss*/
 @charset "UTF-8";
+html,body {
+    font-size: 16px;
+}
+body {
+    margin: 0px;
+    padding: 0px;
+    color:cadetblue;
+}
 .header {
     position: relative;
     background-color: aqua;
