--- a/style.css
+++ b/style.css
@@ -13,3 +13,22 @@ body {
     background-color: aqua;
 }
 /*ナビ*/
+.nav {
+    width: 100%;
+    height: 70px;
+    background-color: dimgray;
+    padding-top: 5px;
+    box-sizing: border-box;
+}
+ul {
+    display: flex;
+}
+li {
+    list-style: none;
+}
+a {
+    display: block;
+    text-decoration: none;
+    color: bisque;
+    margin-right: 35px;
+}
