--- a/style.css
+++ b/style.css
@@ -14,6 +14,23 @@ body {
     background-color: aqua;
 }
 /*ナビ*/
+.nav-toggle {
+    display: none;
+}
+.btn-burger {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    z-index: 2;
+    display: block;
+    width: 44px;
+    height: 44px;
+    background: url("../photo/menubtn.png") center center / 35px 20px no-repeat;
+    cursor: pointer;
+}
+.nav-toggle:checked ~ .btn-burger {
+    background: url("../photo/menuclose.png") center center / 26px 26px no-repeat;
+}
 .nav {
     width: 100%;
     height: 70px;
@@ -35,5 +52,5 @@ body {
 }
 /*メイン*/
 .main {
-    
+
 }
