--- a/style.css
+++ b/style.css
@@ -41,17 +41,17 @@ body {
     background: url("../photo/menuclose.png") center center / 26px 26px no-repeat;
 }
 .nav {
-    width: 100%;
-    height: 70px;
-    background-color: dimgray;
-    padding-top: 5px;
-    box-sizing: border-box;
+    padding-top: 10px;
+    background: url("../photo/nav-obi.jpg") center center / cover no-repeat;
 }
-.nav-list ul {
-    display: flex;
+.nav-list {
+    display: none;
+    margin: 0;
+    padding: 10px;
 }
 .nav-list li {
-    list-style: none;
+    margin: 0;
+    padding: 10px;
 }
 .nav-list a {
     display: block;
