お問い合わせページ

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,1 +1,35 @@
 @charset "UTF-8";
+.form-group {
+    margin-bottom: 20px;
+}
+.form-label {
+    display: block;
+    margin-bottom: 10px;
+    color: cornflowerblue;
+}
+.form-btn {
+    margin: 30px 0;
+    text-align: center;
+}
+
+input [type="text"],
+input [type="email"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #999;
+}
+input [type="text"]:focus,
+input [type="email"]:focus,
+textarea:focus {
+    border-color: skyblue;
+    outline: none;
+}
+button[type="submit"] {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+button[type="submit"]:hover {
+    opacity: 0.65;
+}
