--- a/style.css
+++ b/style.css
@@ -54,10 +54,11 @@ body {
     padding: 10px;
 }
 .nav-list a {
-    display: block;
-    text-decoration: none;
     color: bisque;
     margin-right: 35px;
+}
+.nav-toggle:checked ~ .nav .nav-list {
+    display: block;
 }
 /*メイン*/
 .main {
