--- a/style.css
+++ b/style.css
@@ -23,22 +23,52 @@ body {
     object-fit: contain;
 }
 /*ナビ*/
+.nav-toggle {
+    display: none;
+}
+.btn-burger {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    z-index: 2;
+    display: block;
+    width: 44px;
+    height: 44px;
+    background: url("photo/menubtn.png") center center /35px 20px no-repeat;
+    cursor: pointer;
+}
+.nav-toggle:checked ~ .btn-burger {
+    background: url("photo/menuclose.png") center center /26px 26px no-repeat;
+}
 .menubar {
-    padding-top: 10px;
-    background-color: darkblue;
+    padding: 40px 0;
 }
 .nav-list {
-    display: none;
-    margin: 0;
-    padding: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 0;
 }
 .nav-list li {
-    margin: 0;
-    padding: 10px;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    padding: 0 20px;
+    border-right: 1px solid #fff;
 }
-.nav-list a {
-    color: bisque;
-    margin-right: 35px;
+.nav-list li:first-child {
+    border-left: 1px solid #fff;
+}
+.nav-toggle:checked ~ .nav .nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 /*メイン*/
 .main {
