--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,11 +1,23 @@
 @charset "UTF-8";
 .form-group {
-    margin-bottom: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 800px;
+    margin-bottom: 10px;
 }
 .form-label {
-    display: block;
-    margin-bottom: 10px;
-    color: cornflowerblue;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 12em;
+    flex: 0 0 12em;
+    max-width: 12em;
+    margin: 0;
+    padding-top: 5px;
+}
+.form-col {
+    -webkit-box-flex: 0;
+    -ms-flex: 0 1 100%;
+    flex: 0 1 100%;
 }
 .form-btn {
     margin: 30px 0;
