--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html,body {
 body {
     margin: 0px;
     padding: 0px;
-    color: skyblue;
+    color: blue;
 }
 .header {
     position: relative;
