--- a/game/game.css
+++ b/game/game.css
@@ -21,6 +21,7 @@
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    object-fit: contain;
 }
 .gazo1 {
     background-image: url('アイナナ');
