--- a/game/game.css
+++ b/game/game.css
@@ -1,6 +1,33 @@
 @charset "UTF-8";
 /*スライドショー*/
 .center-slide {
+    width: 100%;
+    margin: 50% auto;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+.slideshow {
+    display: flex;
+    animation: slide-flow 20s infinite linear 1s both;
+}
+.slide {
+    width: 300px;
+    object-fit: contain;
+    border: 1px solid #ddd;
+}
+@keyframes slide-flow {
+    0% {transform: translateX(0);}
+    100% {transform: translateX(-100%);}
+}
+
+.gamea {
+    float: left;
+    width: 50%;
+}
+
+/*スライドショー予備
+.center-slide {
     position: relative;
     width: 70%;
     height: 300px;
@@ -73,7 +100,4 @@
     90% {opacity: 1;}
     100% {opacity: 0; transform: scale(1.1);}
 }
-.gamea {
-    float: left;
-    width: 50%;
-}
+*/
