--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
     -ms-flex-align: center;
     align-items: center;
     padding: 0;
+    list-style: none;
 }
 .nav-list li {
     -webkit-box-flex: 0;
