--- a/game/game.css
+++ b/game/game.css
@@ -1,25 +1,63 @@
 @charset "UTF-8";
 /*スライドショー*/
 .center-slide {
-    width: 100%;
-    margin: 50% auto;
-    display: flex;
-    align-items: center;
+    position: relative;
+    width: 70%;
+    height: 300px;
     overflow: hidden;
+    margin: 0 auto;
 }
-.slideshow {
-    display: flex;
-    animation: slide-flow 20s infinite linear 1s both;
+@media screen and (max-width: 767px) {
+    .center-slide {
+        width: 100%;
+        height: 200px;
+    }
 }
-.slide {
-    width: 300px;
+.gazo1, .gazo2, .gazo3 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
     object-fit: contain;
-    border: 1px solid #ddd;
 }
-@keyframes slide-flow {
-    0% {transform: translateX(0);}
-    100% {transform: translateX(-100%);}
+.gazo1 {
+    background-image: url('アイナナ');
+    animation: slide-animation-01 24s infinite;
 }
+.gazo2 {
+    background-image: url('ダンメモ');
+    animation: slide-animation-02 24s infinite;
+}
+.gazo3 {
+    background-image: url('原神3');
+    animation: slide-animation-073 24s infinite;
+}
+@keyframes slide-animation-01 {
+    0% {opacity: 1; transform: scale(1.0);}
+    30% {opacity: 1;}
+    40% {opacity: 0; transform: scale(1.15);}
+    90% {opacity: 0}
+    100% {opacity: 1; transform: scale(1.0);}
+}
+@keyframes slide-animation-02 {
+    0% {opacity: 0;}
+    30% {opacity: 0; transform: scale(1.1);}
+    40% {opacity: 1;}
+    60% {opacity: 1;}
+    70% {opacity: 0; transform: scale(1.0);}
+    100% {opacity: 0;}
+}
+@keyframes slide-animation-03 {
+    0% {opacity: 0;}
+    60% {opacity: 0; transform: scale(1.0);}
+    70% {opacity: 1;}
+    90% {opacity: 1;}
+    100% {opacity: 0; transform: scale(1.1);}
+}
+
 
 .gamea {
     float: left;
