--- a/about/about.css
+++ b/about/about.css
@@ -1,5 +1,17 @@
 /*aboutだけで使うcss*/
 @charset "UTF-8";
+/*画像*/
+.mainimg {
+    width: 100px;
+    height: 100px;
+    background-color: black;
+}
+.gazo {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
 .main {
     max-width: 1000px;
     margin: 50px auto;
