--- a/game/game.css
+++ b/game/game.css
@@ -1,16 +1,25 @@
 @charset "UTF-8";
-/*画像*/
-.mainimg {
-    width: 100px;
-    height: 100px;
-    background-color: black;
+/*スライドショー*/
+.center-slide {
+    width: 100%;
+    margin: 50% auto;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
 }
-.gazo {
-    max-width: 100%;
-    height: auto;
+.slideshow {
+    display: flex;
+    animation: slide-flow 20s infinite linear 1s both;
+}
+.gazo1, .gazo2, .gazo3 {
+    width: 300px;
     object-fit: contain;
+    border: 1px solid #ddd;
 }
-
+@keyframes slide-flow {
+    0% {transform: translateX(0);}
+    100% {transform: translateX(-100%);}
+}
 
 .gamea {
     float: left;
