--- a/game/game.css
+++ b/game/game.css
@@ -11,7 +11,7 @@
     display: flex;
     animation: slide-flow 20s infinite linear 1s both;
 }
-.gazo1, .gazo2, .gazo3, .gazo4 {
+.gazo1, .gazo2, .gazo3, .gazo4, .gazo5, .gazo6 {
     width: 300px;
     object-fit: contain;
     border: 1px solid #ddd;
