--- a/game/game.css
+++ b/game/game.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 /*スライドショー*/
 .center-slide {
-    width: 50%;
+    width: 100px;
+    height: 100px;
     margin: 50% auto;
     display: flex;
     align-items: center;
