--- a/game/game.css
+++ b/game/game.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /*スライドショー*/
 .center-slide {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 300px;
     margin: 50% auto;
     display: flex;
     align-items: center;
