--- a/game/game.css
+++ b/game/game.css
@@ -2,7 +2,6 @@
 /*スライドショー*/
 .center-slide {
     width: 100%;
-    height: 300px;
     margin: 50% auto;
     display: flex;
     align-items: center;
@@ -14,6 +13,7 @@
 }
 .gazo1, .gazo2, .gazo3, .gazo4, .gazo5, .gazo6 {
     width: 300px;
+    height: 60vw;
     object-fit: contain;
     border: 1px solid #ddd;
 }
